--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="map-container">
         <!-- ASCII art will be inserted here -->
     </div>
-    <input type="range" id="ascii-slider" style="display: none;" min="0" max="35" value="0" step="1">
+    <input type="range" id="ascii-slider" style="display: none;" min="0" max="36" value="0" step="1">
     
 
     <script>
@@ -76,7 +76,8 @@
 
                                                         Deyi Zou
             `,
-                        `
+                       
+            `
 
 
 
@@ -88,6 +89,25 @@
                  / _ \\ _ __   ___         \\ \\ / /__  __ _ _ __ 
                 | | | |  _ \\ / _ \\    o /  \\ V / _ \\/ _  |  __|
                 | |_| | | | |  __/   /|     | |  __| (_| | |   
+                 \\___/|_| |_|\\___|   / \\    |_|\\___|\\__ _\\_|   
+
+
+
+
+                                                        Deyi Zou
+            `,
+             `
+
+
+
+
+
+
+
+                  ___                     __   __              
+                 / _ \\ _ __   ___         \\ \\ / /__  __ _ _ __ 
+                | | | |  _ \\ / _ \\    o    \\ V / _ \\/ _  |  __|
+                | |_| | | | |  __/   /|\\    | |  __| (_| | |   
                  \\___/|_| |_|\\___|   / \\    |_|\\___|\\__ _\\_|   
 
 
