use width based on character count per line to prevent scaling issues

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             border: 2px solid #333; /* Added border */
             padding: 10px; /* Added padding */
             margin: 20px; /* Added margin */
-            width: 666px; /* Fixed width */
+            /*width: 666px;  Fixed width */
+            width: calc(75ch);
             height: 384px; /* Fixed height */
             overflow: auto; /* Add scrollbars if content overflows */
         }
@@ -329,7 +330,7 @@
 
 
 
-                       _\\o
+                        __\\o
                .--.    /) |   .---.        .-.
            .---|--|   .-.     |OPE|  .---. |~|    .--.
         .--|===|So|---|_|--.__|RAT|--|:::| |~|----|==|---.
@@ -780,8 +781,8 @@
                                                          ||:   , |   
           ""                                             ||:     | 
        o /                                               ||: _ . | 
-      /|          /\`\\                /\`\\   ____     _||_| |__|
-    \\_/_\\__)~        __ _ /\`\\    __-----~    ~\\---,__ |_|  |   ___
+      /|          /\`\\                /\`\\      ____      _||_| |__|
+    \\_/_\\__)~        __ _ /\`\\    __-----~    ~\\    ---,__ |_| |__ ___
      ----   ---   ~---___,--~'                  ~~----_____-~'
      \`~----,____  `
 
